[package]
name = "checker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
json = "*"
url= { version="*", features=[] }
reqwest = { version = "*", features = ["json"] }
serde = {version = "*", features = ["derive"] }
tokio = {version = "*", features = ["full"] }