[package]
name = "checker"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
json = "*"
url= "*"
chrono = { version = "*", features = ["serde"] }
reqwest = { version = "*", features = ["json"] }
serde = {version = "*", features = ["derive"] }
tokio = {version = "*", features = ["full"] }