[package]
name = "checker"
version = "0.1.2"
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
json = "*"
url= "*"
chrono = { version = "*", features = ["serde"] }
reqwest = { version = "*", features = ["json"] }
serde = {version = "*", features = ["derive"] }
tokio = {version = "*", features = ["full"] }